--- a/frontend/src/components/Form.module.css
+++ b/frontend/src/components/Form.module.css
@@ -4,7 +4,32 @@ form{
 
 }
 
+
+.voltar{
+    color: red;
+    text-align: center;
+    cursor: pointer;
+    border: 0.8px solid #777;
+    border-radius: 10%;
+    margin-left: 10px;
+    
+}
+
+
+.voltar:hover{
+    background-color: #f89e9e;
+
+}
+
+.actions{
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+
+}
+
 .form_container{
+
     max-width: 400px;
     margin: 0 auto;
     background-color: #fff;
@@ -12,6 +37,7 @@ form{
 }
 
 .form_control{
+    margin-top: 55px;
     display: flex;
     flex-direction: column;
     margin-bottom: 1em;
@@ -37,6 +63,13 @@ form{
 .form_control input::placeholder{
     color: #7b7b7b;
 
+}
+
+.form_control input[type="submit"], .voltar{
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 15px;
+    padding: 7px 7px;
+    height: 33px;
 }
 
 .form_control input[type="submit"]:hover{
