--- a/frontend/src/components/Message.module.css
+++ b/frontend/src/components/Message.module.css
@@ -1,8 +1,13 @@
 .message{
-    max-width: 30%;
+    z-index: 999;
+    position: absolute;
+    top: 50%;
+    left: 50% ;
+    transform: translateX(-50%);
+    width: 300px;
+    height: 25px;
     padding: 1em auto;
     border: 1px solid;
-    margin: 1.2em auto 0;
     text-align: center;
     border-radius: 5px;
 }
